[package]
name = "energy-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Atomic operations
dashmap = "5.5"

# Random number generation
rand = "0.8"

# WebSocket support
tokio-tungstenite = "0.24"

# Futures for async streams
futures = "0.3"
futures-util = "0.3"

# Solana integration (for future use)
# solana-client = "1.17"
# solana-sdk = "1.17"

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = "0.5"

# Test utilities
tempfile = "3.8"

# [[bench]]
# name = "etp_message_bench"
# harness = false